Updated 14 files via CloudCannon

--- a/contact/index.html
+++ b/contact/index.html
@@ -5,6 +5,14 @@
 
 
 		
+		
+		
+
+		
+		
+		
+
+		
 
 		
 		
@@ -42,11 +50,9 @@
 		
 		
 
-		
-		
-		
 
 
+    
 
     
 
@@ -99,7 +105,7 @@ function next() {
 	document.getElementById('controls').style.display = 'none'; 
 	document.getElementById('innerpage').className = 'next'; 
 	setTimeout(function(){
-		document.location.href='/linux.html';
+		document.location.href='/sitemap.xml';
 	}, 350);
 	return false;
 }
