Updated 52 files via CloudCannon

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -83,17 +83,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Luca's services. | Usecue web development</title>
 <meta charset="utf-8" /> 
-<meta http-equiv="Cache-control" content="public">
+<title>Luca's services. | Usecue web development</title>
+
+<meta name="description" content="The new website of this company is ‘less and more’. The site is responsive and has a simple yet consistent design. The site is powered by Jekyll and the Clou...">
+
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
 <link rel="apple-touch-icon" href="/img/icon-196x196.png" />
+
 <meta id="viewport" name="viewport" content="width=device-width">
+
+<!-- Facebook and Twitter integration -->
+<meta property="og:title" content="Luca's services."/>
+<meta property="og:image" content="/uploads/lucass.jpg"/>
+<meta property="og:url" content="https://www.usecue.com/portfolio/index.html"/>
+<meta property="og:type" content="article">
+<meta property="og:image" content="https://www.usecue.com/uploads/lucass.jpg"/>
+<meta property="og:site_name" content="Usecue web development"/>
+<meta property="og:description" content="The new website of this company is ‘less and more’. The site is responsive and has a simple yet consistent design. The site is powered by Jekyll and the Clou..."/>
+
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@jhvanderschee">
+<meta name="twitter:title" content="Luca's services." />
+<meta name="twitter:image" content="https://www.usecue.com/uploads/lucass.jpg" />
+<meta name="twitter:url" content="https://www.usecue.com/portfolio/index.html" />
+<meta name="twitter:description" content="The new website of this company is ‘less and more’. The site is responsive and has a simple yet consistent design. The site is powered by Jekyll and the Clou..." />
+
+<link rel="canonical" href="https://www.usecue.com/portfolio/">
+<link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
+
 <script src="/js/jquery.min.js"></script>
-<script src="/js/typed.js"></script>
+
 <link rel="stylesheet" type="text/css" href="/css/style.css">
-<link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 <script>
 
 function next() {
