--- a/contact/index.html
+++ b/contact/index.html
@@ -83,17 +83,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Contact. | Usecue web development</title>
 <meta charset="utf-8" /> 
-<meta http-equiv="Cache-control" content="public">
+<title>Contact. | Usecue web development</title>
+
+<meta name="description" content="My office is located on Soetendaal 7, 1081BL in Amsterdam (the Netherlands). Have you got a question, or do you need a quote or a fully specified offer? Feel...">
+
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
 <link rel="apple-touch-icon" href="/img/icon-196x196.png" />
+
 <meta id="viewport" name="viewport" content="width=device-width">
+
+<!-- Facebook and Twitter integration -->
+<meta property="og:title" content="Contact."/>
+
+<meta property="og:url" content="https://www.usecue.com/contact/index.html"/>
+<meta property="og:type" content="article">
+<meta property="og:image" content="https://www.usecue.com"/>
+<meta property="og:site_name" content="Usecue web development"/>
+<meta property="og:description" content="My office is located on Soetendaal 7, 1081BL in Amsterdam (the Netherlands). Have you got a question, or do you need a quote or a fully specified offer? Feel..."/>
+
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@jhvanderschee">
+<meta name="twitter:title" content="Contact." />
+
+<meta name="twitter:url" content="https://www.usecue.com/contact/index.html" />
+<meta name="twitter:description" content="My office is located on Soetendaal 7, 1081BL in Amsterdam (the Netherlands). Have you got a question, or do you need a quote or a fully specified offer? Feel..." />
+
+<link rel="canonical" href="https://www.usecue.com/contact/">
+<link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
+
 <script src="/js/jquery.min.js"></script>
-<script src="/js/typed.js"></script>
+
 <link rel="stylesheet" type="text/css" href="/css/style.css">
-<link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 <script>
 
 function next() {
