--- a/portfolio/bibivandervelden.html
+++ b/portfolio/bibivandervelden.html
@@ -83,17 +83,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>bibi. | Usecue web development</title>
 <meta charset="utf-8" /> 
-<meta http-equiv="Cache-control" content="public">
+<title>bibi. | Usecue web development</title>
+
+<meta name="description" content="Usecue developed a Shopify store for Bibi van der Velden (high-end jewelry). The theme is based on the Pipeline theme, but is fully customized for Bibi. Whil...">
+
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
 <link rel="apple-touch-icon" href="/img/icon-196x196.png" />
+
 <meta id="viewport" name="viewport" content="width=device-width">
+
+<!-- Facebook and Twitter integration -->
+<meta property="og:title" content="bibi."/>
+<meta property="og:image" content="/uploads/homepage_hero_image4.jpg"/>
+<meta property="og:url" content="https://www.usecue.com/portfolio/bibivandervelden.html"/>
+<meta property="og:type" content="article">
+<meta property="og:image" content="https://www.usecue.com/uploads/homepage_hero_image4.jpg"/>
+<meta property="og:site_name" content="Usecue web development"/>
+<meta property="og:description" content="Usecue developed a Shopify store for Bibi van der Velden (high-end jewelry). The theme is based on the Pipeline theme, but is fully customized for Bibi. Whil..."/>
+
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@jhvanderschee">
+<meta name="twitter:title" content="bibi." />
+<meta name="twitter:image" content="https://www.usecue.com/uploads/homepage_hero_image4.jpg" />
+<meta name="twitter:url" content="https://www.usecue.com/portfolio/bibivandervelden.html" />
+<meta name="twitter:description" content="Usecue developed a Shopify store for Bibi van der Velden (high-end jewelry). The theme is based on the Pipeline theme, but is fully customized for Bibi. Whil..." />
+
+<link rel="canonical" href="https://www.usecue.com/portfolio/bibivandervelden.html">
+<link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
+
 <script src="/js/jquery.min.js"></script>
-<script src="/js/typed.js"></script>
+
 <link rel="stylesheet" type="text/css" href="/css/style.css">
-<link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 <script>
 
 function next() {
