Updated 30 files via CloudCannon

--- a/404.html
+++ b/404.html
@@ -104,6 +104,8 @@
 <meta name="twitter:url" content="https://www.usecue.com/404.html" />
 <meta name="twitter:description" content="De server gaf een 404 error en gaf nul op rekest (null on request). De pagina die u zocht kan niet worden gevonden. Waarschijnlijk bestaat deze pagina niet (..." />
 
+<link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
+
 <link rel="canonical" href="https://www.usecue.com/404.html">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
 
