--- a/about-me/index.html
+++ b/about-me/index.html
@@ -110,6 +110,8 @@
 <meta name="twitter:url" content="https://www.usecue.com/about-me/index.html" />
 <meta name="twitter:description" content="I am Joost van der Schee and I have founded Usecue BV (LLC) in 2007. I create elegant hand-coded websites and web applications for my clients. My focus lies ..." />
 
+<link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
+
 <link rel="canonical" href="https://www.usecue.com/about-me/">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
 
