--- a/contact/index.html
+++ b/contact/index.html
@@ -110,6 +110,8 @@
 <meta name="twitter:url" content="https://www.usecue.com/contact/index.html" />
 <meta name="twitter:description" content="My office is located on Soetendaal 7, 1081BL in Amsterdam (the Netherlands). Have you got a question, or do you need a quote or a fully specified offer? Feel..." />
 
+<link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
+
 <link rel="canonical" href="https://www.usecue.com/contact/">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
 
