--- a/linux.html
+++ b/linux.html
@@ -110,6 +110,8 @@
 <meta name="twitter:url" content="https://www.usecue.com/linux.html" />
 <meta name="twitter:description" content="I am a web developer. I create elegant, hand-coded websites and web applications for my clients. Interested?" />
 
+<link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
+
 <link rel="canonical" href="https://www.usecue.com/linux.html">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
 
