--- a/portfolio/de-reclamefabriek.html
+++ b/portfolio/de-reclamefabriek.html
@@ -110,6 +110,8 @@
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/de-reclamefabriek.html" />
 <meta name="twitter:description" content="For the ‘Reclamefabriek’ I transferred their WordPress site to Jekyll. At the same time I optimized it, making it a factor 10 quicker to load. This has been ..." />
 
+<link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
+
 <link rel="canonical" href="https://www.usecue.com/portfolio/de-reclamefabriek.html">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
 
