--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -110,6 +110,8 @@
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/index.html" />
 <meta name="twitter:description" content="The new website of this company is ‘less and more’. The site is responsive and has a simple yet consistent design. The site is powered by Jekyll and the Clou..." />
 
+<link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
+
 <link rel="canonical" href="https://www.usecue.com/portfolio/">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
 
