--- a/portfolio/bibivandervelden.html
+++ b/portfolio/bibivandervelden.html
@@ -110,6 +110,8 @@
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/bibivandervelden.html" />
 <meta name="twitter:description" content="Usecue developed a Shopify store for Bibi van der Velden (high-end jewelry). The theme is based on the Pipeline theme, but is fully customized for Bibi. Whil..." />
 
+<link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
+
 <link rel="canonical" href="https://www.usecue.com/portfolio/bibivandervelden.html">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
 
