--- a/portfolio/felgen-wie-neu.html
+++ b/portfolio/felgen-wie-neu.html
@@ -110,6 +110,8 @@
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/felgen-wie-neu.html" />
 <meta name="twitter:description" content="This is a website for Dirk Ihmer, who restores rims ‘like new’ by sanding them down, coating them and finishing them. The website is less than 1 MB in size a..." />
 
+<link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
+
 <link rel="canonical" href="https://www.usecue.com/portfolio/felgen-wie-neu.html">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
 
