Updated 13 files via CloudCannon

--- a/portfolio/bibivandervelden.html
+++ b/portfolio/bibivandervelden.html
@@ -13,13 +13,9 @@
 		
 
 		
-
-		
 		
 		
 
-		
-		
 		
 
 		
@@ -78,8 +74,6 @@
 
     
 
-    
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -129,7 +123,7 @@ function next() {
 	document.getElementById('controls').style.display = 'none'; 
 	document.getElementById('innerpage').className = 'next'; 
 	setTimeout(function(){
-		document.location.href='/portfolio/de-reclamefabriek.html';
+		document.location.href='/blog/index.html';
 	}, 350);
 	return false;
 }
@@ -142,7 +136,7 @@ function prev() {
 	document.getElementById('controls').style.display = 'none'; 
 	document.getElementById('innerpage').className = 'prev'; 
 	setTimeout(function(){
-		document.location.href='/portfolio/felgen-wie-neu.html';
+		document.location.href='/portfolio/de-reclamefabriek.html';
 	}, 350);
 	return false;
 }
