Updated '404.html' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -74,7 +74,7 @@
 <meta charset="utf-8" /> 
 <title>404/nul op rekest. | Usecue web development</title>
 
-<meta name="description" content="De server gaf een 404 error en gaf nul op rekest (null on request). De pagina die u zocht kan niet worden gevonden. Waarschijnlijk bestaat deze pagina niet (...">
+<meta name="description" content="De server replied with a 404 error (null on request). The page you are looking for can not be found. The page probably does not exist anymore. ">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -89,14 +89,14 @@
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.usecue.com"/>
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="De server gaf een 404 error en gaf nul op rekest (null on request). De pagina die u zocht kan niet worden gevonden. Waarschijnlijk bestaat deze pagina niet (..."/>
+<meta property="og:description" content="De server replied with a 404 error (null on request). The page you are looking for can not be found. The page probably does not exist anymore. "/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="404/nul op rekest." />
 
 <meta name="twitter:url" content="https://www.usecue.com/404.html" />
-<meta name="twitter:description" content="De server gaf een 404 error en gaf nul op rekest (null on request). De pagina die u zocht kan niet worden gevonden. Waarschijnlijk bestaat deze pagina niet (..." />
+<meta name="twitter:description" content="De server replied with a 404 error (null on request). The page you are looking for can not be found. The page probably does not exist anymore. " />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -243,7 +243,7 @@ $(window).resize( function() {
 <h1>404/nul op rekest.</h1>
 
 <div style="-webkit-column-count: 1; -moz-column-count: 1; column-count: 1; text-align: center;">
-<p>De server gaf een 404 error en gaf nul op rekest (null on request). De pagina die u zocht kan niet worden gevonden. Waarschijnlijk bestaat deze pagina niet (meer).</p>
+<p>De server replied with a 404 error (null on request). The page you are looking for can not be found. The page probably does not exist anymore.</p>
 
 </div>
 
