Updated '404.html' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -72,9 +72,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" /> 
-<title>404/nul op rekest. | Usecue web development</title>
+<title>404 error | Usecue web development</title>
 
-<meta name="description" content="De server replied with a 404 error (null on request). The page you are looking for can not be found. The page probably does not exist anymore. ">
+<meta name="description" content="De server replied with a 404 error. The page you are looking for can not be found. The page probably does not exist anymore. ">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -83,20 +83,20 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="404/nul op rekest."/>
+<meta property="og:title" content="404 error"/>
 
 <meta property="og:url" content="https://www.usecue.com/404.html"/>
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.usecue.com"/>
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="De server replied with a 404 error (null on request). The page you are looking for can not be found. The page probably does not exist anymore. "/>
+<meta property="og:description" content="De server replied with a 404 error. The page you are looking for can not be found. The page probably does not exist anymore. "/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="404/nul op rekest." />
+<meta name="twitter:title" content="404 error" />
 
 <meta name="twitter:url" content="https://www.usecue.com/404.html" />
-<meta name="twitter:description" content="De server replied with a 404 error (null on request). The page you are looking for can not be found. The page probably does not exist anymore. " />
+<meta name="twitter:description" content="De server replied with a 404 error. The page you are looking for can not be found. The page probably does not exist anymore. " />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -240,10 +240,10 @@ $(window).resize( function() {
         
     </div>
 
-<h1>404/nul op rekest.</h1>
+<h1>404 error</h1>
 
 <div style="-webkit-column-count: 1; -moz-column-count: 1; column-count: 1; text-align: center;">
-<p>De server replied with a 404 error (null on request). The page you are looking for can not be found. The page probably does not exist anymore.</p>
+<p>De server replied with a 404 error. The page you are looking for can not be found. The page probably does not exist anymore.</p>
 
 </div>
 
