--- a/about-me/index.html
+++ b/about-me/index.html
@@ -237,7 +237,7 @@ $(window).resize( function() {
 
 <p>I have studied Industrial Design Engeneering at the Technical University in Delft. This has provided me with an analytical view of the design process and human-computer interaction.</p>
 
-<p>I love CloudCannon, an online CMS system for Jekyll. CloudCannon recently mentioned me on their ‘<a href="https://cloudcannon.com/experts/">experts page</a>’. I launched <a href="http://jekyllcodex.org">jekyllcodex.org</a> and I reached over 50k people by answering Jekyll-related questions on Stack Overflow. Apart from Jekyll/CloudCannon websites I also develop WordPress, Issuu, MailChimp and Shopify solutions. Finally, I have also build my own platform for producing online magazines, called ‘<a href="https://withoutcoding.com">Without Coding</a>’.</p>
+<p>I love <a href="https://cloudcannon.com/">CloudCannon</a>, an online CMS system for Jekyll. CloudCannon recently mentioned me on their ‘<a href="https://cloudcannon.com/experts/">experts page</a>’. I launched <a href="http://jekyllcodex.org">jekyllcodex.org</a> and I reached over 50k people by answering Jekyll-related questions on Stack Overflow. Apart from Jekyll/CloudCannon websites I also develop WordPress, Issuu, MailChimp and Shopify solutions. Finally, I have also build my own platform for producing online magazines, called ‘<a href="https://withoutcoding.com">Without Coding</a>’.</p>
 
 <p>Interested? Do you want quality for a decent price? Please <a href="/contact">contact</a> me! I would love to get to know you and hear about your project.</p>
 
