--- a/firefox.html
+++ b/firefox.html
@@ -151,7 +151,7 @@ $(document).ready( function() {
     
     
     if($(window).width()>600) $(".element").typed({
-        strings: ["Ik ben ^100Firefox fan.^1000", "Ik ben ^200UX expert.^2000", "Ik ben ^200programmeur.^1000", "Ik ben ^200web developer.^500"],
+        strings: ["I am a^100 Firefox fan.^1000", "I am a^200n UX expert.^2000", "I am a^200 programmer.^1000", "I am a^200 web developer.^500"],
         typeSpeed: 20,
         callback: function(){ $(".typed-cursor").css('visibility','hidden');}
     });
@@ -235,6 +235,7 @@ $(window).resize( function() {
     </div>
 
     <div class="innercontent">
+
 
 <h1><span class="element">I am a web developer.</span></h1>
 
