Updated 4 files via CloudCannon

--- a/portfolio/bibivandervelden.html
+++ b/portfolio/bibivandervelden.html
@@ -120,7 +120,7 @@ function next() {
         setTimeout(function(){next()}, 400);
         return false;
     }
-    document.location.href='/blog/index.html';
+    document.location.href='/contact/index.html';
     return false;
 }
 function prev() {
