Updated 11 files via CloudCannon

--- a/404.html
+++ b/404.html
@@ -9,6 +9,10 @@
 		
 
 		
+		
+		
+
+		
 
 		
 		
@@ -47,6 +51,8 @@
 		
 
 
+
+    
 
     
 
@@ -114,7 +120,7 @@ function next() {
         setTimeout(function(){next()}, 400);
         return false;
     }
-    document.location.href='/sitemap.xml';
+    document.location.href='/index.html';
     return false;
 }
 function prev() {
