--- a/contact/index.html
+++ b/contact/index.html
@@ -9,6 +9,10 @@
 		
 
 		
+		
+		
+
+		
 
 		
 		
@@ -47,6 +51,8 @@
 		
 
 
+
+    
 
     
 
@@ -120,7 +126,7 @@ function next() {
         setTimeout(function(){next()}, 400);
         return false;
     }
-    document.location.href='/sitemap.xml';
+    document.location.href='/index.html';
     return false;
 }
 function prev() {
