--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <meta charset="utf-8" /> 
 <title>home | Usecue web development</title>
 
-<meta name="description" content="Website development and hosting">
+<meta name="description" content="I am a web developer. I create elegant, hand-coded websites and web applications for my clients. Interested?">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -101,14 +101,14 @@
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.usecue.com"/>
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="Website development and hosting"/>
+<meta property="og:description" content="I am a web developer. I create elegant, hand-coded websites and web applications for my clients. Interested?"/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="home" />
 
 <meta name="twitter:url" content="https://www.usecue.com/index.html" />
-<meta name="twitter:description" content="Website development and hosting" />
+<meta name="twitter:description" content="I am a web developer. I create elegant, hand-coded websites and web applications for my clients. Interested?" />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -260,7 +260,9 @@ $(window).resize( function() {
     <div class="innercontent">
 
 
+<h1><span class="element">I am a web developer.</span></h1>
 
+<p>I create elegant, hand-coded websites and web applications for my clients. <a href="/about-me">Interested?</a></p>
 
 
 
