Updated 11 files via CloudCannon

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -46,13 +46,7 @@
 		
 		
 
-		
-		
-		
 
-
-
-    
 
     
 
@@ -135,7 +129,7 @@ function prev() {
         setTimeout(function(){prev()}, 400);
         return false;
     }
-    document.location.href='/linux.html';
+    document.location.href='/firefox.html';
     return false;
 }
 var timeout;
