--- a/about-me/index.html
+++ b/about-me/index.html
@@ -42,13 +42,7 @@
 		
 		
 
-		
-		
-		
 
-
-
-    
 
     
 
@@ -129,7 +123,7 @@ function prev() {
         setTimeout(function(){prev()}, 400);
         return false;
     }
-    document.location.href='/firefox.html';
+    document.location.href='/sitemap.xml';
     return false;
 }
 var timeout;
