--- a/404.html
+++ b/404.html
@@ -151,7 +151,7 @@ $(window).resize( function() {
 </script>
 </head>
 
-<body id="body" style="background-color: yellow;" class="404">
+<body id="body" style="background: yellow;" class="404">
 	
 	
     
