--- a/about-me/index.html
+++ b/about-me/index.html
@@ -28,7 +28,7 @@
 <!-- Facebook and Twitter integration -->
 <meta property="og:title" content="About me."/>
 
-<meta property="og:url" content="https://www.usecue.com/about-me.html"/>
+<meta property="og:url" content="https://www.usecue.com/about-me/index.html"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
 <meta property="og:description" content="I am Joost van der Schee and I have founded Usecue BV (LLC) in 2007. I create elegant hand-coded websites and web applications for my clients. My focus lies ..."/>
@@ -37,12 +37,12 @@
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="About me." />
 
-<meta name="twitter:url" content="https://www.usecue.com/about-me.html" />
+<meta name="twitter:url" content="https://www.usecue.com/about-me/index.html" />
 <meta name="twitter:description" content="I am Joost van der Schee and I have founded Usecue BV (LLC) in 2007. I create elegant hand-coded websites and web applications for my clients. My focus lies ..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
-<link rel="canonical" href="https://www.usecue.com/about-me.html">
+<link rel="canonical" href="https://www.usecue.com/about-me/">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
 
 <script src="/js/jquery-1.7.2.min.js"></script>
