--- a/contact/index.html
+++ b/contact/index.html
@@ -28,7 +28,7 @@
 <!-- Facebook and Twitter integration -->
 <meta property="og:title" content="Contact."/>
 
-<meta property="og:url" content="https://www.usecue.com/contact.html"/>
+<meta property="og:url" content="https://www.usecue.com/contact/index.html"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
 <meta property="og:description" content="My office is located on Soetendaal 7, 1081BL in Amsterdam (the Netherlands). Have you got a question, or do you need a quote or a fully specified offer? Feel..."/>
@@ -37,12 +37,12 @@
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="Contact." />
 
-<meta name="twitter:url" content="https://www.usecue.com/contact.html" />
+<meta name="twitter:url" content="https://www.usecue.com/contact/index.html" />
 <meta name="twitter:description" content="My office is located on Soetendaal 7, 1081BL in Amsterdam (the Netherlands). Have you got a question, or do you need a quote or a fully specified offer? Feel..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
-<link rel="canonical" href="https://www.usecue.com/contact.html">
+<link rel="canonical" href="https://www.usecue.com/contact/">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
 
 <script src="/js/jquery-1.7.2.min.js"></script>
