--- a/contact/index.html
+++ b/contact/index.html
@@ -172,7 +172,7 @@ $(window).resize( function() {
 <div data-cms-content-wrapper="/_layouts/page.html">
 <p>My office is located on Amsterdam (the Netherlands). Have you got a question, or do you need a quote or a fully specified offer? Feel free to contact me by sending an email to <a href="mailto:joost@usecue.com">joost@usecue.com</a> or call +31 (0)6 185 189 28.</p>
 
-<p>Note that I do not out-source my work, nor do I hire interns to do it. If you hire me, I will do the work for you. I am sometimes a bit busy, so keep in mind that a decent planning is required.</p>
+<p>Note that I do not out-source my work, nor do I hire interns to do it. If you hire me, I will do the work for you. Keep in mind that a decent planning is required.</p>
 
 <p>My address is:<br />
 Soetendaal 7<br />
