Updated 'contact/index.html' via CloudCannon

--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@
 <meta charset="utf-8" /> 
 <title>Contact. | Usecue web development</title>
 
-<meta name="description" content="My office is located on Amsterdam (the Netherlands). Have you got a question, or do you need a quote or a fully specified offer? Feel free to contact me by s...">
+<meta name="description" content="My office is located on Amsterdam (the Netherlands). I especially love to work for design agencies. I do not out-source my work, nor do I hire interns. If yo...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -33,14 +33,14 @@
 <meta property="og:url" content="https://www.usecue.com/contact/index.html"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="My office is located on Amsterdam (the Netherlands). Have you got a question, or do you need a quote or a fully specified offer? Feel free to contact me by s..."/>
+<meta property="og:description" content="My office is located on Amsterdam (the Netherlands). I especially love to work for design agencies. I do not out-source my work, nor do I hire interns. If yo..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="Contact." />
 
 <meta name="twitter:url" content="https://www.usecue.com/contact/index.html" />
-<meta name="twitter:description" content="My office is located on Amsterdam (the Netherlands). Have you got a question, or do you need a quote or a fully specified offer? Feel free to contact me by s..." />
+<meta name="twitter:description" content="My office is located on Amsterdam (the Netherlands). I especially love to work for design agencies. I do not out-source my work, nor do I hire interns. If yo..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -170,14 +170,16 @@ $(window).resize( function() {
 <h1>Contact.</h1>
 
 <div data-cms-content-wrapper="/_layouts/page.html">
-<p>My office is located on Amsterdam (the Netherlands). Have you got a question, or do you need a quote or a fully specified offer? Feel free to contact me by sending an email to <a href="mailto:joost@usecue.com">joost@usecue.com</a> or call +31 (0)6 185 189 28.</p>
-
-<p>Note that I do not out-source my work, nor do I hire interns to do it. If you hire me, I will do the work for you. Keep in mind that a decent planning is required.</p>
+<p>My office is located on Amsterdam (the Netherlands). I especially love to work for design agencies. I do not out-source my work, nor do I hire interns. If you hire me, I will be the one that does the job. Keep in mind that a decent planning is required.</p>
 
 <p>My address is:<br />
 Soetendaal 7<br />
 1081BL Amsterdam<br />
 The Netherlands</p>
+
+<p>Have you got a question, or do you need a quote or a fully specified offer? Feel free to contact me by sending an email to <a href="mailto:joost@usecue.com">joost@usecue.com</a> or call +31 (0)6 185 189 28.</p>
+
+<p>I can also be found on social media:</p>
 
 <p><a href="https://github.com/jhvanderschee">Github</a> - <a href="http://stackoverflow.com/users/2397550/joosts">Stack Overflow</a> -  <a href="https://www.linkedin.com/in/joost-van-der-schee-4b26682/">Linkedin</a></p>
 
