--- a/contact/index.html
+++ b/contact/index.html
@@ -179,9 +179,8 @@ The Netherlands</p>
 
 <p>Have you got a question, or do you need a quote or a fully specified offer? Feel free to contact me by sending an email to <a href="mailto:joost@usecue.com">joost@usecue.com</a> or call +31 (0)6 185 189 28.</p>
 
-<p>I can also be found on social media:</p>
-
-<p><a href="https://github.com/jhvanderschee">Github</a> - <a href="http://stackoverflow.com/users/2397550/joosts">Stack Overflow</a> -  <a href="https://www.linkedin.com/in/joost-van-der-schee-4b26682/">Linkedin</a></p>
+<p>I can also be found on social media:<br />
+<a href="https://github.com/jhvanderschee">Github</a> - <a href="http://stackoverflow.com/users/2397550/joosts">Stack Overflow</a> -  <a href="https://www.linkedin.com/in/joost-van-der-schee-4b26682/">Linkedin</a></p>
 
 </div>
 
