--- a/contact/index.html
+++ b/contact/index.html
@@ -170,7 +170,7 @@ $(window).resize( function() {
 <h1>Contact.</h1>
 
 <div data-cms-content-wrapper="/_layouts/page.html">
-<p>My office is located on Amsterdam (the Netherlands). I especially love to work for design agencies. I do not out-source my work, nor do I hire interns. If you hire me, I will be the one that does the job. Keep in mind that a decent planning is required.</p>
+<p>My office is located on Amsterdam (the Netherlands). I especially love to work for design agencies. I do not out-source my work, nor do I hire interns. If you hire me, I will be the one that does the job.</p>
 
 <p>My address is:<br />
 Soetendaal 7<br />
