--- a/portfolio/lucass-amsterdam/index.html
+++ b/portfolio/lucass-amsterdam/index.html
@@ -25,7 +25,7 @@
 <meta charset="utf-8" /> 
 <title>Luca's services. | Usecue web development</title>
 
-<meta name="description" content="The new website of this company is ‘less and more’. The site is responsive and has a simple yet consistent design. The site is powered by Jekyll and the Clou...">
+<meta name="description" content="The new website of this company has a typical ‘less is more’ design. The site is responsive and has a simple yet consistent design. The site is powered by Je...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -39,14 +39,14 @@
 <meta property="og:url" content="https://www.usecue.com/portfolio/lucass-amsterdam/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="The new website of this company is ‘less and more’. The site is responsive and has a simple yet consistent design. The site is powered by Jekyll and the Clou..."/>
+<meta property="og:description" content="The new website of this company has a typical ‘less is more’ design. The site is responsive and has a simple yet consistent design. The site is powered by Je..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="Luca's services." />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/lucass.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/lucass-amsterdam/" />
-<meta name="twitter:description" content="The new website of this company is ‘less and more’. The site is responsive and has a simple yet consistent design. The site is powered by Jekyll and the Clou..." />
+<meta name="twitter:description" content="The new website of this company has a typical ‘less is more’ design. The site is responsive and has a simple yet consistent design. The site is powered by Je..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -193,7 +193,7 @@ $(window).resize( function() {
 <div id="loading">Loading..<span>.</span></div>
 </div><div class="col50" id="textcell">
 <h1>Luca's services.</h1>
-<p>The new website of this company is ‘less and more’. The site is responsive and has a simple yet consistent design. The site is powered by Jekyll and the CloudCannon CMS.</p>
+<p>The new website of this company has a typical ‘less is more’ design. The site is responsive and has a simple yet consistent design. The site is powered by Jekyll and the CloudCannon CMS.</p>
 
 <br />
 <a href="//whispering-wallaby.cloudvent.net" target="_blank" class="btn">View website</a>
