Updated 'portfolio/de-vos-en-partners/index.html' via CloudCannon

--- a/portfolio/de-vos-en-partners/index.html
+++ b/portfolio/de-vos-en-partners/index.html
@@ -25,7 +25,7 @@
 <meta charset="utf-8" /> 
 <title>De Vos. | Usecue web development</title>
 
-<meta name="description" content="‘Why make things difficult when they can be easy?’ is the slogan of this lawfirm. I have built them a big Jekyll website with hundreds of pages, designed by ...">
+<meta name="description" content="‘Why make things difficult when they can be easy?’ That is the slogan of this law firm. I have built them a big Jekyll website with hundreds of pages, design...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -39,14 +39,14 @@
 <meta property="og:url" content="https://www.usecue.com/portfolio/de-vos-en-partners/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="‘Why make things difficult when they can be easy?’ is the slogan of this lawfirm. I have built them a big Jekyll website with hundreds of pages, designed by ..."/>
+<meta property="og:description" content="‘Why make things difficult when they can be easy?’ That is the slogan of this law firm. I have built them a big Jekyll website with hundreds of pages, design..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="De Vos." />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/devosenpartners3.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/de-vos-en-partners/" />
-<meta name="twitter:description" content="‘Why make things difficult when they can be easy?’ is the slogan of this lawfirm. I have built them a big Jekyll website with hundreds of pages, designed by ..." />
+<meta name="twitter:description" content="‘Why make things difficult when they can be easy?’ That is the slogan of this law firm. I have built them a big Jekyll website with hundreds of pages, design..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -193,7 +193,7 @@ $(window).resize( function() {
 <div id="loading">Loading..<span>.</span></div>
 </div><div class="col50" id="textcell">
 <h1>De Vos.</h1>
-<p>‘Why make things difficult when they can be easy?’ is the slogan of this lawfirm. I have built them a big Jekyll website with hundreds of pages, designed by Supreme Being in Amsterdam.</p>
+<p>‘Why make things difficult when they can be easy?’ That is the slogan of this law firm. I have built them a big Jekyll website with hundreds of pages, designed and commissioned by Supreme Being in Amsterdam.</p>
 
 <br />
 <a href="https://www.devos.nl/" target="_blank" class="btn">View website</a>
