--- a/about-me/index.html
+++ b/about-me/index.html
@@ -182,7 +182,7 @@ $(window).resize( function() {
 
 
 
-<div id="title" class="showmobile">Usecue <span>&nbsp;web development</span></div>
+<div class="title" class="showmobile">Usecue <span>&nbsp;web development</span></div>
 
 </div></div></div>
 	
@@ -201,7 +201,7 @@ $(window).resize( function() {
 		<a onclick="menu();" class="closemenu"><img src="/img/close2.png" class="black" alt="close" /><img src="/img/close.png" class="white" alt="close" /></a>
 		
 	</div>
-	<div id="title" class="showdesktop">Usecue <span>&nbsp;web development</span></div>
+	<div class="title" class="showdesktop">Usecue <span>&nbsp;web development</span></div>
 </div>
     <script>
     //open external links in a new window
