Updated 31 files via CloudCannon

--- a/contact/index.html
+++ b/contact/index.html
@@ -187,7 +187,7 @@ The Netherlands</p>
 
 
 
-<div class="title" class="showmobile">Usecue <span>&nbsp;web development</span></div>
+<div class="title showmobile">Usecue <span>&nbsp;web development</span></div>
 
 </div></div></div>
 	
@@ -206,7 +206,7 @@ The Netherlands</p>
 		<a onclick="menu();" class="closemenu"><img src="/img/close2.png" class="black" alt="close" /><img src="/img/close.png" class="white" alt="close" /></a>
 		
 	</div>
-	<div class="title" class="showdesktop">Usecue <span>&nbsp;web development</span></div>
+	<div class="title showdesktop">Usecue <span>&nbsp;web development</span></div>
 </div>
     <script>
     //open external links in a new window
