--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ $(window).resize( function() {
 
 
 
-<div class="title" class="showmobile">Usecue <span>&nbsp;web development</span></div>
+<div class="title showmobile">Usecue <span>&nbsp;web development</span></div>
 
 </div></div></div>
 	
@@ -214,7 +214,7 @@ $(window).resize( function() {
 		<a onclick="menu();" class="closemenu"><img src="/img/close2.png" class="black" alt="close" /><img src="/img/close.png" class="white" alt="close" /></a>
 		
 	</div>
-	<div class="title" class="showdesktop">Usecue <span>&nbsp;web development</span></div>
+	<div class="title showdesktop">Usecue <span>&nbsp;web development</span></div>
 </div>
     <script>
     //open external links in a new window
