--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 <link rel="canonical" href="https://www.usecue.com/">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
 <link rel="stylesheet" type="text/css" href="/css/style.css">
-
 </head>
 
 <body id="body"  class="home">
@@ -78,8 +77,8 @@
 	
 	<div id="menu"><div class="outercontent"><div class="content">
         <a href="/" style="margin-top: 33px; display: inline-block;">home.</a><br />
-		    <a href="/about-me/">about me.</a><br />
-		    <a href="/portfolio/">portfolio.</a><br />
+            <a href="/about-me/">about me.</a><br />
+		    <a href="/portfolio/de-vos-en-partners/">portfolio.</a><br />
 		    <a href="/blog/">blog.</a><br />
         <a href="/contact/">contact.</a><br />		
         
