--- a/portfolio/de-vos-en-partners/index.html
+++ b/portfolio/de-vos-en-partners/index.html
@@ -53,7 +53,6 @@
 <link rel="canonical" href="https://www.usecue.com/portfolio/de-vos-en-partners/">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
 <link rel="stylesheet" type="text/css" href="/css/style.css">
-
 </head>
 
 <body id="body" style="background: #ABBAB7;" class="portfolio">
@@ -95,8 +94,8 @@
 	
 	<div id="menu"><div class="outercontent"><div class="content">
         <a href="/" style="margin-top: 33px; display: inline-block;">home.</a><br />
-		    <a href="/about-me/">about me.</a><br />
-		    <a href="/portfolio/">portfolio.</a><br />
+            <a href="/about-me/">about me.</a><br />
+		    <a href="/portfolio/de-vos-en-partners/">portfolio.</a><br />
 		    <a href="/blog/">blog.</a><br />
         <a href="/contact/">contact.</a><br />		
         
