--- a/404.html
+++ b/404.html
@@ -558,6 +558,10 @@ mp3_embed();
         }
     });
 </script>
+
+    <script src="/js/prefixfree.min.js"></script>
+    <script src="/js/conic-gradient.js"></script>
+
 </body>
 
 </html>
