--- a/contact/index.html
+++ b/contact/index.html
@@ -569,6 +569,10 @@ mp3_embed();
         }
     });
 </script>
+
+    <script src="/js/prefixfree.min.js"></script>
+    <script src="/js/conic-gradient.js"></script>
+
 </body>
 
 </html>
