--- a/portfolio/studioinhout/index.html
+++ b/portfolio/studioinhout/index.html
@@ -21,6 +21,8 @@
 
     
 
+    
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -133,7 +135,7 @@ function next() {
         setTimeout(function(){next()}, 400);
         return false;
     }
-    document.location.href='/portfolio/de-vos-en-partners/';
+    document.location.href='/portfolio/zonmw/';
     return false;
 }
 function prev() {
