--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta charset="utf-8" /> 
 <title>home | Usecue web development</title>
 
-<meta name="description" content="I am a web developer. I create elegant, hand-coded websites and web applications for my clients. Interested?">
+<meta name="description" content="I am a web developer. I create and host elegant, hand-coded websites and web applications for my clients. Interested?">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -37,14 +37,14 @@
 <meta property="og:url" content="https://www.usecue.com/index.html"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="I am a web developer. I create elegant, hand-coded websites and web applications for my clients. Interested?"/>
+<meta property="og:description" content="I am a web developer. I create and host elegant, hand-coded websites and web applications for my clients. Interested?"/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="home" />
 
 <meta name="twitter:url" content="https://www.usecue.com/index.html" />
-<meta name="twitter:description" content="I am a web developer. I create elegant, hand-coded websites and web applications for my clients. Interested?" />
+<meta name="twitter:description" content="I am a web developer. I create and host elegant, hand-coded websites and web applications for my clients. Interested?" />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -70,7 +70,7 @@
 
 <h1><span class="element">I am a web developer.</span></h1>
 
-<p>I create elegant, hand-coded websites and web applications for my clients. <a href="/about-me">Interested?</a></p>
+<p>I create and host elegant, hand-coded websites and web applications for my clients. <a href="/about-me">Interested?</a></p>
 
 
 
