Updated 35 files via CloudCannon

--- a/portfolio/zonmw/index.html
+++ b/portfolio/zonmw/index.html
@@ -31,7 +31,17 @@
 
 <link rel="canonical" href="https://www.usecue.com/portfolio/zonmw/">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.usecue.com/sitemap.xml" />
+
+<script>
+    if (screen.width < 450) {
+      document.getElementById("viewport").setAttribute("content", "width=450");
+    } else {
+      document.getElementById("viewport").setAttribute("content", "width=device-width");
+    }
+</script>
+
 <link rel="stylesheet" type="text/css" href="/css/style.css">
+
 </head>
 
 <body id="top" class="portfolio" style="background-color: #968D86;">
