Updated '404.html' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
 
 </head>
 
-<body id="top" class="home" style="background-color: #dd0000;">
+<body id="top" class="home" style="background-color: #cc0000;">
     <a id="logo" href="/" class="medium underline">u</a>
 
     <ul id="menu">
