--- a/portfolio/de-reclamefabriek/index.html
+++ b/portfolio/de-reclamefabriek/index.html
@@ -44,7 +44,7 @@
 
 </head>
 
-<body id="top" class="portfolio" style="background: #016faa;">
+<body id="top" class="portfolio bgcolor" style="background: #016faa;">
   
     <a id="logo" href="/" class="medium underline"><img src="/img/icon-196x196.png" alt="Usecue logo" /></a>
 
