--- a/portfolio/zonmw/index.html
+++ b/portfolio/zonmw/index.html
@@ -44,7 +44,7 @@
 
 </head>
 
-<body id="top" class="portfolio" style="background: #77716d;">
+<body id="top" class="portfolio bgcolor" style="background: #77716d;">
   
     <a id="logo" href="/" class="medium underline"><img src="/img/icon-196x196.png" alt="Usecue logo" /></a>
 
