--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" /> 
 <title>about | Usecue web development</title>
 
-<meta name="description" content="I am Joost van der Schee and I have founded Usecue BV (LLC) in 2007. I create elegant hand-coded websites and web applications for my clients. My focus lies ...">
+<meta name="description" content="I am Joost van der Schee and I have founded Usecue BV (LLC) in 2007. I create and host elegant hand-coded websites and web applications for my clients. My fo...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -18,14 +18,14 @@
 <meta property="og:url" content="https://www.usecue.com/about/index.html"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="I am Joost van der Schee and I have founded Usecue BV (LLC) in 2007. I create elegant hand-coded websites and web applications for my clients. My focus lies ..."/>
+<meta property="og:description" content="I am Joost van der Schee and I have founded Usecue BV (LLC) in 2007. I create and host elegant hand-coded websites and web applications for my clients. My fo..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="about" />
 
 <meta name="twitter:url" content="https://www.usecue.com/about/index.html" />
-<meta name="twitter:description" content="I am Joost van der Schee and I have founded Usecue BV (LLC) in 2007. I create elegant hand-coded websites and web applications for my clients. My focus lies ..." />
+<meta name="twitter:description" content="I am Joost van der Schee and I have founded Usecue BV (LLC) in 2007. I create and host elegant hand-coded websites and web applications for my clients. My fo..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -67,7 +67,7 @@
 
 <h1>about</h1>
 
-<p>I am Joost van der Schee and I have founded Usecue BV (LLC) in 2007. I create elegant hand-coded websites and web applications for my clients. My focus lies on efficiency and quality in the design and development process. Usecue specializes in building custom solutions and mainly works for advertising agencies and graphic designers.</p>
+<p>I am Joost van der Schee and I have founded Usecue BV (LLC) in 2007. I create and host elegant hand-coded websites and web applications for my clients. My focus lies on efficiency and quality in the design and development process. Usecue specializes in building custom solutions and mainly works for advertising agencies and graphic designers.</p>
 
 <p>I have studied Industrial Design Engeneering at the Technical University in Delft. This has provided me with an analytical view of the design process and human-computer interaction.</p>
 
