Updated 7 files via CloudCannon

--- a/portfolio/de-reclamefabriek/index.html
+++ b/portfolio/de-reclamefabriek/index.html
@@ -130,7 +130,7 @@
 <p>For the ‘Reclamefabriek’ I transferred their WordPress site to Jekyll. At the same time I optimized it, making it a factor 10 quicker to load. This has been done by reducing the amount of requests, splitting pages and optimizing files and images.</p>
 
 
-<p><a href="//tangerine-mushroom.cloudvent.net/#overons" rel="noopener" target="_blank">view project &rarr;</a></p>
+<p><a href="//tangerine-mushroom.cloudvent.net/#overons" rel="noopener" target="_blank">view website &rarr;</a></p>
 
 
 
