--- a/portfolio/studio-inhout/index.html
+++ b/portfolio/studio-inhout/index.html
@@ -130,7 +130,7 @@
 <p>A 100% score in Google Lighthouse and less than 150 lines of CSS. A lightweight, blazing fast, simple and elegant website that does what it is supposed to do. Full-featured, responsive and CMS driven, without using a single line of jQuery!</p>
 
 
-<p><a href="https://www.studioinhout.nl/collectie/notenhouten-tafel/" rel="noopener" target="_blank">view project &rarr;</a></p>
+<p><a href="https://www.studioinhout.nl/collectie/notenhouten-tafel/" rel="noopener" target="_blank">view website &rarr;</a></p>
 
 
 
