--- a/portfolio/zonmw/index.html
+++ b/portfolio/zonmw/index.html
@@ -130,7 +130,7 @@
 <p>Not often you get the chance to make a website with an editorial layout. This was one of those rare occasions. The design was impeccable. I have tried to honor this by turning the design in a perfectly responsive and performant website.</p>
 
 
-<p><a href="//polite-coal.cloudvent.net/" rel="noopener" target="_blank">view project &rarr;</a></p>
+<p><a href="//polite-coal.cloudvent.net/" rel="noopener" target="_blank">view website &rarr;</a></p>
 
 
 
