Updated 3 files via CloudCannon

--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" /> 
-<title>about | Usecue web development</title>
+<title>About me | Usecue web development</title>
 
 <meta name="description" content="My name is Joost van der Schee and I am a web developer based in Amsterdam. I have studied Industrial Design Engineering at the Technical University in Delft...">
 
@@ -13,7 +13,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="about"/>
+<meta property="og:title" content="About me"/>
 
 <meta property="og:url" content="https://www.usecue.com/about/index.html"/>
 <meta property="og:type" content="article">
@@ -22,7 +22,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="about" />
+<meta name="twitter:title" content="About me" />
 
 <meta name="twitter:url" content="https://www.usecue.com/about/index.html" />
 <meta name="twitter:description" content="My name is Joost van der Schee and I am a web developer based in Amsterdam. I have studied Industrial Design Engineering at the Technical University in Delft..." />
@@ -58,7 +58,7 @@
         <div id="content">
 
 
-<h1>about</h1>
+<h1>About me</h1>
 
 <p>My name is Joost van der Schee and I am a web developer based in Amsterdam. I have studied Industrial Design Engineering at the Technical University in Delft and founded ‘Usecue’ in 2007. My first priority is my family, but my work is absolutely number two. I love what I do, which is building beautiful websites and web applications.</p>
 
