--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" /> 
-<title>contact | Usecue web development</title>
+<title>Contact | Usecue web development</title>
 
 <meta name="description" content="My office is located in Amsterdam (the Netherlands). I especially love to work for graphic designers and advertising agencies. I do not out-source my work, n...">
 
@@ -13,7 +13,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="contact"/>
+<meta property="og:title" content="Contact"/>
 
 <meta property="og:url" content="https://www.usecue.com/contact/index.html"/>
 <meta property="og:type" content="article">
@@ -22,7 +22,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="contact" />
+<meta name="twitter:title" content="Contact" />
 
 <meta name="twitter:url" content="https://www.usecue.com/contact/index.html" />
 <meta name="twitter:description" content="My office is located in Amsterdam (the Netherlands). I especially love to work for graphic designers and advertising agencies. I do not out-source my work, n..." />
@@ -58,7 +58,7 @@
         <div id="content">
 
 
-<h1>contact</h1>
+<h1>Contact</h1>
 
 <p>My office is located in Amsterdam (the Netherlands). I especially love to work for graphic designers and advertising agencies. I do not out-source my work, nor do I hire interns. If you hire me, I will be the one that does the job.</p>
 
