Updated 4 files via CloudCannon

--- a/portfolio/zonmw/index.html
+++ b/portfolio/zonmw/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" /> 
-<title>jeugd bij ZonMW | Usecue web development</title>
+<title>Jeugd bij ZonMW | Usecue web development</title>
 
 <meta name="description" content="Not often you get the chance to make a website with an editorial layout. This was one of those rare occasions. The design was impeccable. I have tried to hon...">
 
@@ -13,7 +13,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="jeugd bij ZonMW"/>
+<meta property="og:title" content="Jeugd bij ZonMW"/>
 <meta property="og:image" content="https://www.usecue.com/uploads/zonmw1.jpg"/>
 <meta property="og:url" content="https://www.usecue.com/portfolio/zonmw/"/>
 <meta property="og:type" content="article">
@@ -22,7 +22,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="jeugd bij ZonMW" />
+<meta name="twitter:title" content="Jeugd bij ZonMW" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/zonmw1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/zonmw/" />
 <meta name="twitter:description" content="Not often you get the chance to make a website with an editorial layout. This was one of those rare occasions. The design was impeccable. I have tried to hon..." />
@@ -57,7 +57,7 @@
 
 
 <div class="fullscreen">
-    <a href="//polite-coal.cloudvent.net/" title="View the website of jeugd bij ZonMW" aria-label="View the website of jeugd bij ZonMW">
+    <a href="//polite-coal.cloudvent.net/" title="View the website of Jeugd bij ZonMW" aria-label="View the website of Jeugd bij ZonMW">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/zonmw2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/zonmw1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -116,7 +116,7 @@
 </div>
 <div id="scrolldown"></div>
 
-<h1 class="large">jeugd bij ZonMW</h1>
+<h1 class="large">Jeugd bij ZonMW</h1>
 
 <p>Not often you get the chance to make a website with an editorial layout. This was one of those rare occasions. The design was impeccable. I have tried to honor this by turning the design in a perfectly responsive and performant website.</p>
 
