Updated 3 files via CloudCannon

--- a/portfolio/usecue/index.html
+++ b/portfolio/usecue/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" /> 
-<title>This very website | Usecue web development</title>
+<title>the Usecue website | Usecue web development</title>
 
 <meta name="description" content="This website itself should absolutely be in my portfolio. It is a tribute to the web and is designed and coded by myself. This website is hosted on special i...">
 
@@ -13,7 +13,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="This very website"/>
+<meta property="og:title" content="the Usecue website"/>
 <meta property="og:image" content="https://www.usecue.com/uploads/usecue1.jpg"/>
 <meta property="og:url" content="https://www.usecue.com/portfolio/usecue/"/>
 <meta property="og:type" content="article">
@@ -22,7 +22,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="This very website" />
+<meta name="twitter:title" content="the Usecue website" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/usecue1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/usecue/" />
 <meta name="twitter:description" content="This website itself should absolutely be in my portfolio. It is a tribute to the web and is designed and coded by myself. This website is hosted on special i..." />
@@ -57,7 +57,7 @@
 
 
 <div class="fullscreen">
-    <a href="https://www.usecue.com/" title="View the website of This very website" aria-label="View the website of This very website">
+    <a href="https://www.usecue.com/" title="View the website of the Usecue website" aria-label="View the website of the Usecue website">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/usecue2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/usecue1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -116,7 +116,7 @@
 </div>
 <div id="scrolldown"></div>
 
-<h1 class="large">This very website</h1>
+<h1 class="large">the Usecue website</h1>
 
 <p>This website itself should <em>absolutely</em> be in my portfolio. It is <a href="/blog/a-tribute-to-the-web/">a tribute to the web</a> and is designed and coded by myself. This website is hosted on special infrastructure to get <a href="/blog/websites-that-load-instantly/">the best performance possible</a>. Most pages will load in under 0.2 seconds (from within Europe). The pages are only 41kb large and have a perfect Google score.</p>
 
