--- a/portfolio/la-manzanilla/index.html
+++ b/portfolio/la-manzanilla/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" /> 
-<title>La Manzanilla | Usecue web development</title>
+<title>la Manzanilla | Usecue web development</title>
 
 <meta name="description" content="La Manzanilla brings the most exclusive and tasty olive oil in the world to the (lucky) people of Amsterdam. The webshop sends the order to the shop owner, w...">
 
@@ -13,7 +13,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="La Manzanilla"/>
+<meta property="og:title" content="la Manzanilla"/>
 <meta property="og:image" content="https://www.usecue.com/uploads/lamanzanilla1.jpg"/>
 <meta property="og:url" content="https://www.usecue.com/portfolio/la-manzanilla/"/>
 <meta property="og:type" content="article">
@@ -22,7 +22,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="La Manzanilla" />
+<meta name="twitter:title" content="la Manzanilla" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/lamanzanilla1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/la-manzanilla/" />
 <meta name="twitter:description" content="La Manzanilla brings the most exclusive and tasty olive oil in the world to the (lucky) people of Amsterdam. The webshop sends the order to the shop owner, w..." />
@@ -57,7 +57,7 @@
 
 
 <div class="fullscreen">
-    <a href="https://lamanzanilla.nl/" title="View the website of La Manzanilla" aria-label="View the website of La Manzanilla">
+    <a href="https://lamanzanilla.nl/" title="View the website of la Manzanilla" aria-label="View the website of la Manzanilla">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/lamanzanilla2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/lamanzanilla1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -116,7 +116,7 @@
 </div>
 <div id="scrolldown"></div>
 
-<h1 class="large">La Manzanilla</h1>
+<h1 class="large">la Manzanilla</h1>
 
 <p>La Manzanilla brings the most exclusive and tasty olive oil in the world to the (lucky) people of Amsterdam. The webshop sends the order to the shop owner, who in its turn sends a payment link to the customer. This way there is no need for a payment integration, which reduces overhead for this small business owner.</p>
 
