Updated 3 files via CloudCannon

--- a/portfolio/studio-inhout/index.html
+++ b/portfolio/studio-inhout/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" /> 
-<title>studio inhout | Usecue web development</title>
+<title>studio inHout | Usecue web development</title>
 
 <meta name="description" content="A 100% score in Google Lighthouse and less than 150 lines of CSS. A lightweight, blazing fast, simple and elegant website that does what it is supposed to do...">
 
@@ -13,7 +13,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="studio inhout"/>
+<meta property="og:title" content="studio inHout"/>
 <meta property="og:image" content="https://www.usecue.com/uploads/studioinhout1.jpg"/>
 <meta property="og:url" content="https://www.usecue.com/portfolio/studio-inhout/"/>
 <meta property="og:type" content="article">
@@ -22,7 +22,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="studio inhout" />
+<meta name="twitter:title" content="studio inHout" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/studioinhout1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/studio-inhout/" />
 <meta name="twitter:description" content="A 100% score in Google Lighthouse and less than 150 lines of CSS. A lightweight, blazing fast, simple and elegant website that does what it is supposed to do..." />
@@ -57,7 +57,7 @@
 
 
 <div class="fullscreen">
-    <a href="https://www.studioinhout.nl/collectie/notenhouten-tafel/" title="View the website of studio inhout" aria-label="View the website of studio inhout">
+    <a href="https://www.studioinhout.nl/collectie/notenhouten-tafel/" title="View the website of studio inHout" aria-label="View the website of studio inHout">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/studioinhout2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/studioinhout1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -116,7 +116,7 @@
 </div>
 <div id="scrolldown"></div>
 
-<h1 class="large">studio inhout</h1>
+<h1 class="large">studio inHout</h1>
 
 <p>A 100% score in Google Lighthouse and less than 150 lines of CSS. A lightweight, blazing fast, simple and elegant website that does what it is supposed to do. Full-featured, responsive and CMS driven, without using a single line of jQuery!</p>
 
