--- a/portfolio/de-vos-en-partners/index.html
+++ b/portfolio/de-vos-en-partners/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" /> 
-<title>de vos | Usecue web development</title>
+<title>de Vos | Usecue web development</title>
 
 <meta name="description" content="‘Why make things difficult when they can be easy?’ That is the slogan of this law firm. I have built them a big Jekyll website with hundreds of pages. The av...">
 
@@ -13,7 +13,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="de vos"/>
+<meta property="og:title" content="de Vos"/>
 <meta property="og:image" content="https://www.usecue.com/uploads/devos1.jpg"/>
 <meta property="og:url" content="https://www.usecue.com/portfolio/de-vos-en-partners/"/>
 <meta property="og:type" content="article">
@@ -22,7 +22,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="de vos" />
+<meta name="twitter:title" content="de Vos" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/devos1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/de-vos-en-partners/" />
 <meta name="twitter:description" content="‘Why make things difficult when they can be easy?’ That is the slogan of this law firm. I have built them a big Jekyll website with hundreds of pages. The av..." />
@@ -57,7 +57,7 @@
 
 
 <div class="fullscreen">
-    <a href="https://www.devos.nl/" title="View the website of de vos" aria-label="View the website of de vos">
+    <a href="https://www.devos.nl/" title="View the website of de Vos" aria-label="View the website of de Vos">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/devos2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/devos1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -116,7 +116,7 @@
 </div>
 <div id="scrolldown"></div>
 
-<h1 class="large">de vos</h1>
+<h1 class="large">de Vos</h1>
 
 <p>‘Why make things difficult when they can be easy?’ That is the slogan of this law firm. I have built them a big Jekyll website with hundreds of pages. The average page weight is around 500kb. This website was designed and commissioned by Supreme Being in Amsterdam.</p>
 
