Updated 'portfolio/la-manzanilla/index.html' via CloudCannon

--- a/portfolio/la-manzanilla/index.html
+++ b/portfolio/la-manzanilla/index.html
@@ -57,7 +57,7 @@
 
 
 <div class="fullscreen">
-    <a href="https://lamanzanilla.nl/" title="View the website of la Manzanilla" aria-label="View the website of la Manzanilla">
+    <a href="https://lamanzanilla.es/" title="View the website of la Manzanilla" aria-label="View the website of la Manzanilla">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/lamanzanilla2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/lamanzanilla1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -136,7 +136,7 @@
     </div>
 </div>
 
-<p style="padding-top: 1.4em;"><br /><a href="https://lamanzanilla.nl/" rel="noopener" target="_blank" class="btn" style="background: #738a34;">view project</a></p>
+<p style="padding-top: 1.4em;"><br /><a href="https://lamanzanilla.es/" rel="noopener" target="_blank" class="btn" style="background: #738a34;">view project</a></p>
 
 
 
