Updated 52 files via CloudCannon

--- a/404.html
+++ b/404.html
@@ -36,7 +36,8 @@
 
 </head>
 
-<body id="top" class="error home bgcolor" style="background: #cc0000;">
+<body id="top" class="error home bgcolor" style="background-color: #cc0000;">
+
   <script>
     if (localStorage.getItem('mode') == 'dark') document.getElementById('top').classList.add('darkmode'); 
   </script>
