--- a/portfolio/usecue/index.html
+++ b/portfolio/usecue/index.html
@@ -36,7 +36,8 @@
 
 </head>
 
-<body id="top" class="portfolio bgcolor" style="background: #555;">
+<body id="top" class="portfolio bgcolor" style="background-color: #555;">
+
   <script>
     if (localStorage.getItem('mode') == 'dark') document.getElementById('top').classList.add('darkmode'); 
   </script>
