--- a/portfolio/de-babywegwijzer/index.html
+++ b/portfolio/de-babywegwijzer/index.html
@@ -36,7 +36,8 @@
 
 </head>
 
-<body id="top" class="portfolio bgcolor" style="background: #6a918c;">
+<body id="top" class="portfolio bgcolor" style="background-color: #6a918c;">
+
   <script>
     if (localStorage.getItem('mode') == 'dark') document.getElementById('top').classList.add('darkmode'); 
   </script>
