--- a/portfolio/felgen-wie-neu/index.html
+++ b/portfolio/felgen-wie-neu/index.html
@@ -36,7 +36,8 @@
 
 </head>
 
-<body id="top" class="portfolio bgcolor" style="background: #5b6669;">
+<body id="top" class="portfolio bgcolor" style="background-color: #5b6669;">
+
   <script>
     if (localStorage.getItem('mode') == 'dark') document.getElementById('top').classList.add('darkmode'); 
   </script>
