--- a/portfolio/zonmw/index.html
+++ b/portfolio/zonmw/index.html
@@ -36,7 +36,8 @@
 
 </head>
 
-<body id="top" class="portfolio bgcolor" style="background: #77716d;">
+<body id="top" class="portfolio bgcolor" style="background-color: #77716d;">
+
   <script>
     if (localStorage.getItem('mode') == 'dark') document.getElementById('top').classList.add('darkmode'); 
   </script>
