--- a/portfolio/usecue/index.html
+++ b/portfolio/usecue/index.html
@@ -43,7 +43,7 @@
   </script>
 
   
-  <!--<div id="blobbox"><div id="blob"></div></div>-->
+<div id="blobbox"><div id="blob"></div></div>
   
     <a id="logo" href="/" style="background: #555;"><img src="/img/icon-196x196.png" alt="Usecue logo" /></a>
 
