Updated 48 files via CloudCannon

--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
   </script>
 
   
-<div id="blobbox"><div id="blob"></div></div>
+<!--<div id="blobbox"><div id="blob"></div></div>-->
   
     <a id="logo" href="/" style="background: #cc0000;"><img src="/img/icon-196x196.png" alt="Usecue logo" /></a>
 
