--- a/portfolio/la-manzanilla/index.html
+++ b/portfolio/la-manzanilla/index.html
@@ -44,7 +44,7 @@
   </script>
 
   
-<div id="blobbox"><div id="blob"></div></div>
+<!--<div id="blobbox"><div id="blob"></div></div>-->
   
     <a id="logo" href="/" style="background: #738a34;"><img src="/img/icon-196x196.png" alt="Usecue logo" /></a>
 
